--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,23 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
-<h1><%= @article.title %></h1>
-<p><%= @article.text %></p>
-<h1>Category: <%= @article.category.name %></h1>
+<div class="">
+    <h1>Articles#show</h1>
+    <p>Find me in app/views/articles/show.html.erb</p>
+    <h1><%= @article.title %></h1>
+    <p><%= @article.text %></p>
+    <h1>Category: <%= @article.category.name %></h1>
+    <small class="d-flex flex-start">
+        <% if !current_user.voted_articles.ids.include?(@article.id) %>
+            <span> <%= @article.votes.count %> Votes </span>
+            <i>
+                <%= form_for(@vote)do | f | %>
+                <%= f.hidden_field :article_id, value: @article.id%>
+                <%= f.hidden_field :status, value: :true %>
+                <%= f.submit "Vote" %>
+                <% end %>
+            </i>
+        <% else %>
+            <i>
+                <span> <%= @article.votes.count %> Votes </span>
+                <%= link_to 'Unvote', vote_path(current_user.votes.ids ), method: :delete %>
+            </i>
+        <% end %>
+    </small>
