--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,7 +14,7 @@
       <tr>
         <td><%= category.name %></td>
         <td><%= category.priority %></td>
-        <td><%= link_to 'Show', category %></td>
+        <td><%= link_to 'Show', articles_path(:cate => category.id) %></td> 
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
