main dasboard styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,16 +20,7 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Sports</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">RPG</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Strategy</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Simulation</a>
+            <%= link_to 'Categories', categories_path, class: "nav-link text-white" %>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0 ml-auto">
