--- a/app/views/ypages/home.html.erb
+++ b/app/views/ypages/home.html.erb
@@ -3,18 +3,14 @@
     <div class="row">
       <% if @articles.collect(&:image).detect(&:attached?) %>
         <div class="featured p-3 col-9" style= "background-image: url(<%= rails_blob_url(main_image) %>);">
-            <div class="featured_text d-flex flex-column">
+            <div class="featured_text d-flex flex-column ml-4">
               <h1 class="text-white mb-2"><%= main_article_title%></h1>
               <small class="text-white main-article-text text-wrap"><%= main_article_text%></small>
-              <small class="text-white"><%= link_to 'Read More', article_path(:id => main_article.id) %></small>
+              <small class="text-white"><%= link_to 'Read More', article_path(:id => main_article.id), class:"read-more" %></small>
             </div>
         </div>
       <% else %>
-        <div class="featured p-3 col-9" style= "background-image: url('/assets/img2.jpeg');"></p>
-            <div class="featured_text">
-              <p class="icons1 text-white">Default Article</p>
-            </div>
-        </div>
+        <div class="featured p-3 col-9" style= "background-image: url('/assets/img2.jpeg');"></div>
       <% end %>
         <div class="col-3" style= "background-image: url('/assets/img3.jpg');">
           <p class="text-white"><%= link_to 'Sports', articles_path(:cate => '2') %></p>
@@ -22,7 +18,7 @@
     </div>
     <div class="second row">
       <div class="col-3" style= "background-image: url('/assets/img1.jpg');">
-        <p class="text-white"><%= link_to 'Shooters', articles_path(:cate => '1') %></p>
+        <p class="text-white ml-3"><%= link_to 'Shooters', articles_path(:cate => '1') %></p>
       </div>
       <div class="col-3" style= "background-image: url('/assets/img5.jpg');">
         <p class="text-white"><%= link_to 'RPG', articles_path(:cate => '3') %></p>
